examples/test/testpolicy19471.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19471
  namespace: namespace217
spec:
  podSelector:
    matchLabels:
      key40: value19
      key41: value7
      key25: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value10
          key33: value10
      podSelector:
        matchLabels:
          key46: value26
          key41: value41
